<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StorageAccess</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
   	<string name="internal_storage">Internal Storage</string>
   	<string name="external_storage">External Storage</string>
   	<string name="raw_resources">Raw Resources</string>
   	<string name="save">Save</string>
   	<string name="load">Load</string>
   	<string name="file_content">File Content</string>

</resources>
