<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/app_padding"
        tools:context="${relativePackage}.${activityClass}" >

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hello_world" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/internal_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/internal_storage" />

            <RadioButton
                android:id="@+id/external_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/external_storage" />
            <RadioButton
                android:id="@+id/row_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raw_resources" />
        </RadioGroup>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSaveClick"
            android:text="@string/save" />

        <TextView
            android:id="@+id/showFileContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_content" />

        <Button
            android:id="@+id/load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onLoadClick"
            android:text="@string/load" />

        <TextView
            android:id="@+id/status_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>