<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="@dimen/app_padding"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/label_email"
        android:layout_width="@dimen/login_labels_width"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_margin"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/app_margin"
        android:layout_toRightOf="@id/label_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/label_password"
        android:layout_width="@dimen/login_labels_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginRight="@dimen/app_margin"
        android:layout_marginTop="@dimen/app_margin"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginBottom="@dimen/app_margin"
        android:layout_toRightOf="@id/label_password"
        android:hint="@string/password"
        
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onLoginClick"
        android:text="@string/login" />

</RelativeLayout>